Revert merge feat/events-search: 이벤트/후기 기능 제거

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,6 +7,6 @@ spring:
       ddl-auto: update
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/test
-    username: root
-    password: Juneon0830@
+    url: jdbc:mysql//localhost:3306/test
+    username:
+    password:
